--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 __pycache__/
 *.tap
+!reference.tap  # Исключение: не игнорировать файл reference (эталонный файл для тестов)
 test.py
+
+# Временные папки тестов
+Тестовая_игольница/
 
 # PyInstaller
 build/
