Save visualization file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 __pycache__/
+
+# Файлы с командами
 *.tap
-!reference.tap  # Исключение: не игнорировать файл reference (эталонный файл для тестов)
-test.py
+# Исключение: не игнорировать файл reference (эталонный файл для тестов)
+!reference.tap
+
+# Файлы визуализации
+*.html
 
 # Временные папки тестов
 Тестовая_игольница/
